<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAuth"
    android:background="@color/colorbg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Sign In"
        android:id="@+id/signinTV"
        android:gravity="center"
        android:textColor="@color/colorwhite"
        android:textSize="25sp"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/signinTV"
        android:src="@drawable/profile"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorwhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorwhite"
            android:textSize="10sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColorHint="@color/colorwhite"
            android:textColor="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:drawableStart="@drawable/email"
            android:inputType="textEmailAddress"
            android:id="@+id/emailET"
            android:drawablePadding="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorwhite"
            android:layout_marginTop="10dp"
            android:textSize="10sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:textColorHint="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:textColor="@color/colorwhite"
            android:drawableLeft="@drawable/password"
            android:id="@+id/passET"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/go"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorwhite"
        android:id="@+id/signinbtn"
        android:background="@color/coloryollow"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/have_no_account_signup"
        android:textStyle="bold"
        android:textColor="@color/colorwhite"
        android:clickable="true"
        android:layout_marginBottom="25dp"
        android:id="@+id/signupTV"
        android:gravity="center"/>



</RelativeLayout>