<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    tools:context=".RegAuth">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Sign Up"
        android:id="@+id/signinTV"
        android:gravity="center"
        android:textColor="@color/colorwhite"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/signinTV"
        android:src="@drawable/profile"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorwhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorwhite"
            android:textSize="10sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorwhite"
            android:textColor="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:drawableStart="@drawable/name"
            android:id="@+id/nameET"
            android:drawablePadding="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorwhite"
            android:textSize="10sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:textColorHint="@color/colorwhite"
            android:textColor="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:drawableStart="@drawable/email"
            android:id="@+id/emailET"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorwhite"
            android:layout_marginTop="10dp"
            android:textSize="10sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password1"
            android:textColorHint="@color/colorwhite"
            android:backgroundTint="@color/colorwhite"
            android:textColor="@color/colorwhite"
            android:drawableLeft="@drawable/password"
            android:inputType="textPassword"
            android:id="@+id/passET"
            android:drawablePadding="10dp"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorwhite"
            android:id="@+id/signupbtn"
            android:background="@color/coloryollow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions"
            android:gravity="center"
            android:textColor="@color/colorwhite"
            android:layout_marginTop="5dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Already have an Account? Sign in"
        android:textColor="@color/colorwhite"
        android:clickable="true"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:id="@+id/regsigninTV"
        android:gravity="center"/>

</RelativeLayout>